--- a/app/views/experiences/_form.html.haml
+++ b/app/views/experiences/_form.html.haml
@@ -7,6 +7,9 @@
           %li= msg
 
   .field
+    = f.label :start_at
+    = f.text_field :start_at
+  .field
     = f.label :summary
     = f.text_field :summary
   .field
