change background color

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -42,8 +42,12 @@
           width: 380px;
           padding-top: 8px;
           margin-left: 50px;
+          background-color: #3EA0C1;
+          border: none;
           hr {
             margin: 10px 0;
+            border: none;
+            border-top: 1px solid #C7C7C7;
           }
         }
       }
