--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -9,5 +9,8 @@
   .field
     = f.label :full_name
     = f.text_field :full_name
+  .field
+    = f.label :photo
+    = f.file_field :photo
   .actions
     = f.submit 'Save'
