--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require bootstrap.min
  *= require bootstrap-responsive.min
+ *= require font-awesome
  *= require_self
  *= require_tree .
  */
