--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -7,8 +7,20 @@
           %li= msg
 
   .field
-    = f.label :full_name
-    = f.text_field :full_name
+    = f.label :name
+    = f.text_field :name
+  .field
+    = f.label :phone
+    = f.text_field :phone
+  .field
+    = f.label :email
+    = f.text_field :email
+  .field
+    = f.label :blog
+    = f.text_field :blog
+  .field
+    = f.label :github
+    = f.text_field :github
   .field
     = f.label :photo
     = f.file_field :photo
