add user praise

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -30,6 +30,9 @@
         height: 15px;
         margin-right: 3px;
       }
+      .praise {
+        margin-top: 20px;
+      }
     }
 
     .block {
