--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -22,6 +22,9 @@
     = f.label :github
     = f.text_field :github
   .field
+    = f.label :praise
+    = f.text_area :praise, :rows => "5"
+  .field
     = f.label :photo
     = f.file_field :photo
   .actions
