--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @user do |f|
+= simple_form_for @user, :html => {:class => "form-horizontal"} do |f|
   - if @user.errors.any?
     #error_explanation
       %h2= "#{pluralize(@user.errors.count, "error")} prohibited this user from being saved:"
@@ -6,26 +6,14 @@
         - @user.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :phone
-    = f.text_field :phone
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :blog
-    = f.text_field :blog
-  .field
-    = f.label :github
-    = f.text_field :github
-  .field
-    = f.label :praise
-    = f.text_area :praise, :rows => "5"
-  .field
-    = f.label :photo
-    = f.file_field :photo
-  .actions
-    = f.submit 'Save'
+  .form-inputs
+    = f.input :name
+    = f.input :phone
+    = f.input :email
+    = f.input :blog
+    = f.input :github
+    = f.input :praise, :rows => "5"
+    = f.input :photo
+
+  .form-actions
+    = f.button :submit
