--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,19 +1,33 @@
-%h1 Listing users
-
-%table
-  %tr
-    %th Full name
-    %th
-    %th
-    %th
-
-  - @users.each do |user|
+- model_class = User
+.page-header
+  %h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+%table.table.table-striped
+  %thead
     %tr
-      %td= user.full_name
-      %td= link_to 'Show', user
-      %td= link_to 'Edit', edit_user_path(user)
-      %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %th= model_class.human_attribute_name(:id)
+      %th= model_class.human_attribute_name(:name)
+      %th= model_class.human_attribute_name(:photo)
+      %th= model_class.human_attribute_name(:phone)
+      %th= model_class.human_attribute_name(:email)
+      %th= model_class.human_attribute_name(:blog)
+      %th= model_class.human_attribute_name(:github)
+      %th= model_class.human_attribute_name(:praise)
+      %th= model_class.human_attribute_name(:created_at)
+      %th=t '.actions', :default => t("helpers.actions")
+  %tbody
+    - @users.each do |user|
+      %tr
+        %td= link_to user.id, user_path(user)
+        %td= user.name
+        %td= user.photo
+        %td= user.phone
+        %td= user.email
+        %td= user.blog
+        %td= user.github
+        %td= user.praise
+        %td=l user.created_at
+        %td
+          = link_to t('.edit', :default => t("helpers.links.edit")), edit_user_path(user), :class => 'btn btn-mini'
+          = link_to t('.destroy', :default => t("helpers.links.destroy")), user_path(user), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
 
-%br
-
-= link_to 'New User', new_user_path
+= link_to t('.new', :default => t("helpers.links.new")), new_user_path, :class => 'btn btn-primary'
