use simple_format to show experience

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -34,4 +34,4 @@
             %h5
               = experience.summary
               %hr
-            = experience.detail
+            = simple_format experience.detail
