make user skills crud work

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -19,13 +19,12 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #0C68BD;
   &:visited {
-    color: #666;
+    color: #0C68BD;
   }
   &:hover {
     color: #fff;
-    background-color: #000;
   }
 }
 
