--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -31,6 +31,7 @@
           .experience-time.pull-left
             = experience.start_at.strftime("%y.%m")
           .experience-content.well.pull-left
+            .arrow-left
             %h5
               = experience.summary
               %hr
