--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+.block {
+  background-color: #3EA0C1;
+  color: white;
+  border: none;
+}
 .user-wrapper {
   margin: 0 auto;
   margin-top: 20px;
@@ -21,10 +27,7 @@
     position: fixed;
 
     .user-contact {
-      background-color: #3EA0C1;
-      color: white;
       width: 240px;
-      border: none;
       img {
         width: 100%;
       }
@@ -85,8 +88,6 @@
           width: 380px;
           padding-top: 8px;
           margin-left: 50px;
-          background-color: #3EA0C1;
-          border: none;
           position: relative;
 
           .arrow-left {
