--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -23,14 +23,17 @@
         .info.praise
           = simple_format @user.praise
     .user-skill.block.span2.pull-left.well
-      this is skill
+      - @user.skills.each do |skill|
+        .skill
+          %em.icon-check
+          = skill.name
   .timeline-wrapper.span5.pull-right
     .timeline
       - @user.experiences.each do |experience|
         .experience-wrapper.clearfix
           .experience-time.pull-left
             = experience.start_at.strftime("%y.%m")
-          .experience-content.well.pull-left
+          .experience-content.block.well.pull-left
             .arrow-left
             %h5
               = experience.summary
