--- a/app/views/skills/show.html.haml
+++ b/app/views/skills/show.html.haml
@@ -4,6 +4,6 @@
   %b name:
   = @skill.name
 
-= link_to 'Edit', edit_user_skill_path(@user, @experience)
+= link_to 'Edit', edit_user_skill_path(@user, @skill)
 \|
 = link_to 'Back', user_skills_path(@user)
