--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -55,6 +55,11 @@
       width: 180px;
       margin-left: 30px;
     }
+
+    .user-project {
+      width: 180px;
+      margin-left: 30px;
+    }
   }
 
   .timeline-wrapper {
