--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -111,4 +111,14 @@
   }
 }
 
-
+.table {
+  tr {
+    td {
+      line-height: 60px;
+      img {
+        max-height: 60px;
+        max-weight: 60px;
+      }
+    }
+  }
+}
